--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
+        "maatwebsite/excel": "~2.1.0",
         "roland/crud": "dev-master",
         "stevebauman/location": "^3.0",
         "usmanhalalit/laracsv": "^2.0"
