--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
         "maatwebsite/excel": "~2.1.0",
+        "matthewbdaly/laravel-azure-storage": "^1.3",
         "roland/crud": "dev-master",
         "stevebauman/location": "^3.0",
         "usmanhalalit/laracsv": "^2.0"
